Updated the fix for the horizontal scroll bug

--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
-*{
+/* *{
   overflow-x: hidden;
-}
+  box-sizing: border-box;
+} */
 body {
+  overflow-x: hidden;
   min-width: 800px;
 }
 
